name:                  levy
version:               0.1.0.0
synopsis:              Lévy distribution functions
description:           Assorted Lévy distribution functions for statistics and simulations
homepage:              https://github.com/jamesthompson/levy.git
license:               BSD3
license-file:          LICENSE
author:                James R. Thompson
maintainer:            jamesthompsonoxford@gmail.com
copyright:             James R. Thompson
category:              Math
build-type:            Custom
cabal-version:         >= 1.10
extra-source-files:    default.nix
                       LICENSE
                       README.md
                       .gitignore

source-repository head
  type: git
  location: https://github.com/jamesthompson/levy.git

custom-setup
  setup-depends:       base        >=4.8     && <5,
                       Cabal,
                       cabal-doctest >=1.0.2 && <1.1

library
  exposed-modules:     Statistics.Distribution.Levy
  build-depends:       base        >=4.8     && <5,
                       erf         >=2.0.0.0 && <2.1,
                       MonadRandom >=0.5     && <0.6,
                       random      >=1.1     && <1.2
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             test/doctests.hs
  other-modules:       Build_doctests
  build-depends:       base        >=4.8     && <5,
                       doctest     >= 0.11,
                       levy
  default-language:    Haskell2010
